--- a/testing_MC_IC041717/Base.lproj/Main.storyboard
+++ b/testing_MC_IC041717/Base.lproj/Main.storyboard
@@ -50,11 +50,11 @@
             <objects>
                 <viewController id="4po-zX-zVo" customClass="ProfileViewController" customModule="testing_MC_IC041717" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2tZ-0V-Mr9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="8JQ-ou-l88" userLabel="Main">
-                                <rect key="frame" x="0.0" y="25" width="375" height="617"/>
+                                <rect key="frame" x="0.0" y="25" width="375" height="597"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QVj-D9-NIs">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -96,6 +96,9 @@
                                                 <state key="normal" title="Edit your profile">
                                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="vnb-jF-nFz" kind="show" id="DoB-jR-dIm"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -111,7 +114,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bSO-T9-6ch">
-                                        <rect key="frame" x="0.0" y="174" width="375" height="443"/>
+                                        <rect key="frame" x="0.0" y="174" width="375" height="423"/>
                                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </view>
                                 </subviews>
@@ -139,6 +142,7 @@
                         <viewLayoutGuide key="safeArea" id="k2I-It-vVi"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="l0p-lb-hah"/>
+                    <navigationItem key="navigationItem" id="OAF-cS-GLH"/>
                     <connections>
                         <outlet property="displayNameText" destination="0WN-el-e7x" id="DTM-5Z-w4H"/>
                         <outlet property="profileImageView" destination="UM9-Hc-7mx" id="IhO-fL-yut"/>
@@ -334,8 +338,126 @@
             </objects>
             <point key="canvasLocation" x="-802.39999999999998" y="40.929535232383813"/>
         </scene>
+        <!--Edit Profile-->
+        <scene sceneID="bjR-qM-h3n">
+            <objects>
+                <viewController title="Edit Profile" id="vnb-jF-nFz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jri-ai-Ivf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pZB-iJ-l25">
+                                <rect key="frame" x="-20.5" y="0.0" width="416" height="647"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cua-Ek-QyS">
+                                        <rect key="frame" x="166" y="611" width="83" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s9N-J9-hsx">
+                                        <rect key="frame" x="25" y="26" width="185" height="22"/>
+                                        <state key="normal" title="    Edit Profile" image="xmark" catalog="system">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="4po-zX-zVo" kind="show" id="AcT-1V-4da"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdb-Af-9os">
+                                        <rect key="frame" x="335.5" y="12" width="19" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <state key="normal" image="checkmark" catalog="system">
+                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="rdb-Af-9os" secondAttribute="trailing" constant="61.5" id="3jk-34-idl"/>
+                                    <constraint firstItem="s9N-J9-hsx" firstAttribute="leading" secondItem="pZB-iJ-l25" secondAttribute="leading" constant="25" id="B52-dr-QmF"/>
+                                    <constraint firstItem="rdb-Af-9os" firstAttribute="top" secondItem="pZB-iJ-l25" secondAttribute="top" constant="12" id="C9M-fH-0wy"/>
+                                    <constraint firstAttribute="bottom" secondItem="Cua-Ek-QyS" secondAttribute="bottom" constant="15" id="MH4-uN-QAn"/>
+                                    <constraint firstItem="rdb-Af-9os" firstAttribute="leading" secondItem="s9N-J9-hsx" secondAttribute="trailing" constant="125.5" id="PKx-oM-weK"/>
+                                    <constraint firstItem="s9N-J9-hsx" firstAttribute="top" secondItem="pZB-iJ-l25" secondAttribute="top" constant="26" id="PYd-mZ-smu"/>
+                                    <constraint firstItem="Cua-Ek-QyS" firstAttribute="leading" secondItem="pZB-iJ-l25" secondAttribute="leading" constant="166" id="RaO-Ox-4ue"/>
+                                    <constraint firstItem="s9N-J9-hsx" firstAttribute="leading" secondItem="pZB-iJ-l25" secondAttribute="leading" constant="25" id="SMG-L5-uV9"/>
+                                    <constraint firstItem="rdb-Af-9os" firstAttribute="leading" secondItem="pZB-iJ-l25" secondAttribute="leading" constant="335.5" id="dQO-FH-Ike"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Cua-Ek-QyS" secondAttribute="trailing" constant="20" symbolic="YES" id="vmQ-Qr-AyB"/>
+                                    <constraint firstItem="rdb-Af-9os" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="s9N-J9-hsx" secondAttribute="trailing" constant="8" symbolic="YES" id="zNX-xQ-tk7"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VqZ-E7-Hue">
+                                <rect key="frame" x="25" y="75" width="325" height="372"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nuf-aJ-BWn">
+                                        <rect key="frame" x="104" y="144" width="98" height="30"/>
+                                        <state key="normal" title="Change Photo"/>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q13-nw-L2G">
+                                        <rect key="frame" x="8" y="259" width="309" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Display Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R1f-UI-OLf">
+                                        <rect key="frame" x="8" y="212" width="309" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Bio" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IgM-cO-YKe">
+                                        <rect key="frame" x="8" y="301" width="309" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Efy-N5-Zp6">
+                                        <rect key="frame" x="100" y="34.5" width="102" height="107"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="R1f-UI-OLf" firstAttribute="top" secondItem="nuf-aJ-BWn" secondAttribute="bottom" constant="38" id="5lh-OT-TiM"/>
+                                    <constraint firstItem="nuf-aJ-BWn" firstAttribute="leading" secondItem="VqZ-E7-Hue" secondAttribute="leading" constant="104" id="7lW-13-3Qd"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="leading" secondItem="VqZ-E7-Hue" secondAttribute="leadingMargin" id="EQO-EP-MNn"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="trailing" secondItem="q13-nw-L2G" secondAttribute="trailing" id="Las-pt-H9p"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="top" secondItem="q13-nw-L2G" secondAttribute="bottom" constant="8" symbolic="YES" id="Nbu-kK-AJR"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="trailing" secondItem="VqZ-E7-Hue" secondAttribute="trailingMargin" id="WhB-hQ-A6Q"/>
+                                    <constraint firstAttribute="bottom" secondItem="IgM-cO-YKe" secondAttribute="bottom" constant="37" id="m02-2W-VQJ"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="leading" secondItem="R1f-UI-OLf" secondAttribute="leading" id="mOs-Qz-MUp"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="trailing" secondItem="R1f-UI-OLf" secondAttribute="trailing" id="pZX-Fb-ues"/>
+                                    <constraint firstItem="nuf-aJ-BWn" firstAttribute="top" secondItem="Efy-N5-Zp6" secondAttribute="bottom" constant="2" id="rdO-Yn-ZaL"/>
+                                    <constraint firstItem="q13-nw-L2G" firstAttribute="top" secondItem="R1f-UI-OLf" secondAttribute="bottom" constant="13" id="wEA-Kd-4Mn"/>
+                                    <constraint firstItem="nuf-aJ-BWn" firstAttribute="centerX" secondItem="Efy-N5-Zp6" secondAttribute="centerX" constant="2" id="xQd-Nt-hpv"/>
+                                    <constraint firstItem="IgM-cO-YKe" firstAttribute="leading" secondItem="q13-nw-L2G" secondAttribute="leading" id="yXq-WC-ARw"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pZB-iJ-l25" firstAttribute="centerX" secondItem="jri-ai-Ivf" secondAttribute="centerX" id="3eQ-TQ-r1p"/>
+                            <constraint firstItem="MGF-wb-ZJa" firstAttribute="trailing" secondItem="VqZ-E7-Hue" secondAttribute="trailing" constant="25" id="TZD-4X-7dB"/>
+                            <constraint firstItem="pZB-iJ-l25" firstAttribute="bottom" secondItem="MGF-wb-ZJa" secondAttribute="bottom" id="Veh-jg-TSr"/>
+                            <constraint firstItem="VqZ-E7-Hue" firstAttribute="top" secondItem="jri-ai-Ivf" secondAttribute="topMargin" constant="75" id="fFR-m9-O9Q"/>
+                            <constraint firstItem="MGF-wb-ZJa" firstAttribute="bottom" secondItem="VqZ-E7-Hue" secondAttribute="bottom" constant="200" id="mzb-0h-qWg"/>
+                            <constraint firstItem="VqZ-E7-Hue" firstAttribute="leading" secondItem="MGF-wb-ZJa" secondAttribute="leading" constant="25" id="n3F-zz-ZVW"/>
+                            <constraint firstItem="pZB-iJ-l25" firstAttribute="top" secondItem="MGF-wb-ZJa" secondAttribute="top" id="uKL-B2-nL4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MGF-wb-ZJa"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="8NI-k4-yDs"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yuW-NZ-boc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3048.8000000000002" y="1110.4947526236883"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="AcT-1V-4da"/>
+    </inferredMetricsTieBreakers>
     <resources>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
     </resources>
 </document>
