--- a/testing_MC_IC041717/Base.lproj/Main.storyboard
+++ b/testing_MC_IC041717/Base.lproj/Main.storyboard
@@ -341,7 +341,7 @@
         <!--Edit Profile-->
         <scene sceneID="bjR-qM-h3n">
             <objects>
-                <viewController title="Edit Profile" id="vnb-jF-nFz" sceneMemberID="viewController">
+                <viewController title="Edit Profile" id="vnb-jF-nFz" customClass="EditProViewController" customModule="testing_MC_IC041717" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jri-ai-Ivf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
